# gpufort

./: .gitignore  CMakeLists.txt  CNAME  LICENSE  Makefile  README.md  env_gpufort.sh  os-requirements.txt  python3-optional-requirements.txt  python3-requirements.txt  test.py
config/: dynamico.py.in
docs/: README.md
examples/acc2hip/: .Makefile.swp  rules.mk
examples/cudafortran/: rules.mk
examples/cuf/: rules.mk
examples/openacc/: Makefile  rules.mk
hipfort-rocm-5.2.3/: .gitignore  CMakeLists.txt  README.md
hipfort-rocm-5.2.3/cmake/Modules/: SetFortranFlags.cmake  rocm-cmake.cmake
hipfort-rocm-5.2.3/lib/: CMakeLists.txt
hipfort-rocm-5.2.3/lib/hipfort/: SUPPORTED_API_HIP.md  SUPPORTED_API_HIPBLAS.md  SUPPORTED_API_HIPFFT.md  SUPPORTED_API_HIPRAND.md  SUPPORTED_API_HIPSOLVER.md  SUPPORTED_API_HIPSPARSE.md  SUPPORTED_API_ROCBLAS.md  SUPPORTED_API_ROCFFT.md  SUPPORTED_API_ROCRAND.md  SUPPORTED_API_ROCSOLVER.md  SUPPORTED_API_ROCSPARSE.md  hipfort.f  hipfort_auxiliary.f  hipfort_check.f  hipfort_cuda_errors.f  hipfort_enums.f  hipfort_hipblas.f  hipfort_hipblas_auxiliary.f  hipfort_hipblas_enums.f  hipfort_hipfft.f  hipfort_hipfft_enums.f  hipfort_hipfft_params.f  hipfort_hiphostregister.f  hipfort_hipmalloc.f  hipfort_hipmemcpy.f  hipfort_hiprand.f  hipfort_hiprand_enums.f  hipfort_hipsolver.f  hipfort_hipsolver_enums.f  hipfort_hipsparse.f  hipfort_hipsparse_enums.f  hipfort_rocblas.f  hipfort_rocblas_auxiliary.f  hipfort_rocblas_enums.f  hipfort_rocfft.f  hipfort_rocfft_enums.f  hipfort_rocrand.f  hipfort_rocrand_enums.f  hipfort_rocsolver.f  hipfort_rocsolver_enums.f  (+3 more)
hipfort-rocm-5.2.3/lib/modules-amdgcn/: hip_blas.f  hip_blas_enums.f  rocblas_module.f90  rocfft.f  rocfft_enums.f  rocsparse_module.f90
hipfort-rocm-5.2.3/test/: CMakeLists.txt  Makefile  Makefile.in
hipfort-rocm-5.2.3/test/f2003/hipblas/: .gitignore  cgemm.f03  dgemm.f03  dger.f03  dscal.f03  saxpy.f03  scopy.f03  sgemv.f03  sger.f03  sswap.f03
hipfort-rocm-5.2.3/test/f2003/hipfft/: hipfft.f03
hipfort-rocm-5.2.3/test/f2003/rocblas/: saxpy.f03
hipfort-rocm-5.2.3/test/f2003/rocfft/: Makefile  rocfft.f03
hipfort-rocm-5.2.3/test/f2003/rocsolver/: Makefile  rocsolver_dgeqrf  rocsolver_dgeqrf.f03
hipfort-rocm-5.2.3/test/f2003/rocsparse/: .gitignore  ddoti.f03
hipfort-rocm-5.2.3/test/f2003/vecadd/: .gitignore  hip_implementation.cpp  main.f03
hipfort-rocm-5.2.3/test/f2008/hipblas/: Makefile  cgemm.f03  dgemm.f03  dger.f03  dscal.f03  saxpy.f03  scopy.f03  sgemv.f03  sger.f03  sswap.f03
hipfort-rocm-5.2.3/test/f2008/hipfft/: Makefile  hipfft.f03
hipfort-rocm-5.2.3/test/f2008/hipsolver/: Makefile  hipsolverdgetrf.f03
hipfort-rocm-5.2.3/test/f2008/rocblas/: .gitignore  Makefile  saxpy.f03
hipfort-rocm-5.2.3/test/f2008/rocfft/: .gitignore  rocfft.f03
hipfort-rocm-5.2.3/test/f2008/rocsolver/: rocsolver_dgeqrf  rocsolver_dgeqrf.f03
hipfort-rocm-5.2.3/test/f2008/rocsparse/: Makefile  ddoti.f03
hipfort-rocm-5.2.3/test/f2008/vecadd/: Makefile  main.f03
include/: Makefile  cudafor.f90  cudafor.f90-fort2hip.hip.cpp  cudafor.gpufort_mod  gpufort.h  gpufort_intrinsics.f90  gpufort_intrinsics_std_f2003.f90  gpufort_intrinsics_std_f2008.f90  gpufort_intrinsics_std_f2018.f90  gpufort_intrinsics_std_f77.f90  gpufort_intrinsics_std_f95.f90  gpufort_intrinsics_std_gnu.f90  gpufort_loop.h  gpufort_reductions.h  gpufort_triple.h  intrinsics.f90  intrinsics_std_f77.f90  iso_c_binding.f90
notes/: todos.md
python/: Makefile  __init__.py  addtoplevelpath.py  config.py  converter.py  fc.hip.py  gpufort.py  gpufort_options.py.in  gpufortfc.py  opts.py  pyparsingtools.py  utils.py
python/fort2hip/: addtoplevelpath.py  derivedtypegen.py  fort2hip.py  fort2hip_codegen.py.in  fort2hip_filter.py.in  fort2hip_gpufort_sources.py.in  fort2hip_legacy.py  fort2hip_options.py.in  fort2hip_render.py.in  kernelgen.py  kernelgen_hip.py  model.py  render.py  templategen.py
python/fort2x/: addtoplevelpath.py  cppfilegen.py  derivedtypegen.py  f03filegen.py  filegen.py  fort2x.py  fort2x_options.py.in  gpufort_sources.py  kernelgen.py  render.py  templategen.py
python/gpufort/: Makefile  __init__.py  main.py  opts.py
python/grammar/: addtoplevelpath.py  cuda_enums.py  cuda_libs.py  cudafor.py  grammar.py  grammar_acc.py.in  grammar_cuf.py.in  grammar_directives.py.in  grammar_epilog.py.in  grammar_f03.py.in  grammar_gpufort_control.py.in  grammar_options.py.in
python/indexer/: addtoplevelpath.py  indexer.py  indexer_options.py.in  indexertools.py  indexertools_options.py.in  indexerutils.py  scoper.py  scoper_options.py.in
python/linemapper/: grammar.py  linemapper.py  linemapper_options.py.in  linemapperutils.py
python/preprocessor/: grammar.py  preprocessor.py  preprocessor_grammar.py.in  preprocessor_options.py.in
python/scanner/: addtoplevelpath.py  normalizer.py  scanner.py  scanner_groups.py.in  scanner_options.py.in  scanner_tree.py.in  scanner_tree_acc.py.in  scanner_tree_acc2hip.py.in  scanner_tree_acc2omp.py.in  scannerutils.py
python/test/: Makefile.in
python/tests/: Makefile.in
python/tools/: addtoplevelpath.py  filtered.json  gpufort-indexer.py  load_json.py  out.txt
python/translator/: translator.py  translator_acc.py.in  translator_acc.py_bak  translator_api.py.in  translator_base.py.in  translator_codegen.py.in  translator_cuf.py.in  translator_directives.py.in  translator_f03.py.in  translator_options.py.in  translator_parser.py.in
python/utils/: fileutils.py  kwargs.py  logging.py  logging_options.py.in  parsingutils.py  pyparsingutils.py
requirements_whl/: MarkupSafe-2.1.2-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  orjson-3.8.7-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pyparsing-3.0.9-py3-none-any.whl
runtime/: README.md
runtime/gpufort_acc_runtime/: Makefile  codegen.py  rules.mk
runtime/gpufortrt/: Makefile  codegen.py  openacc_library_routines.md  rules.mk
runtime/openacc_gomp/: Makefile  rules.mk
share/gfortran-intrinsics/: get_intrinsics.sh
share/gpufort_sources/: gpufort.f03  gpufort.h  (+5 more)
src/: Makefile  rules.mk
(+925 files in other folders)
